2009-05-05  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#110504 - Unable to restore background image with Backup and
	restore application	

	* src/hd-backgrounds.c (queue, current_theme, set_theme_idle_id,
	  load_cache_info_cb, update_backgrounds_from_theme, set_theme_idle,
	  hd_backgrounds_theme_changed, hd_backgrounds_startup,
	  hd_backgrounds_dipose): Add support for updating backgrounds on
	  theme change . This is only done when the _MB_THEME window property
	  on the root window changes.

	* debian/changelog: Update.

2009-05-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.25
	* configure.ac: 0.3.25

2009-05-03  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#109445 - Unable to open received SMS when a dialog is opened
	in layout mode

	* src/hd-activate-views-dialog.c (hd_activate_views_dialog_response):
	* src/hd-add-applet-dialog.c (hd_add_applet_dialog_response):
	* src/hd-add-bookmark-dialog.c (hd_add_bookmark_dialog_response):
	* src/hd-add-task-dialog.c (hd_add_task_dialog_response):
	* src/hd-change-background-dialog.c (add_image_dialog_response,
	  hd_change_background_dialog_response):
	* src/hd-hildon-home-dbus.c (select_applets_clicked_cb,
	  select_shortcuts_clicked_cb, select_bookmarks_clicked_cb,
	  manage_views_clicked_cb): Do not use gtk_dialog_run.

	* debian/changelog: Update.

2009-05-03  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#110590 - Authorization requests and SMS get truncated

	* src/hd-incoming-event-window.c (hd_incoming_event_window_init): Fix
	margin.

	* src/hd-notification-manager.c (hd_notification_manager_notify):
	Remove unused code.

	* debian/changelog: Update.

2009-04-30  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#111026 - Notifications, Event notification overview displays
	wrong message

	* src/hd-incoming-events.c: Cleanup code make it more simple and
	easier to understand. Add docs. Remove redundance. Make it easier to