@@ -1,5 +1,12 @@
 2009-05-05  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	* src/hd-change-background-dialog.c
+	  (hd_change_background_dialog_response,
+	  hd_change_background_dialog_init): Set Change background dialog
+	  height to 404px.
+
+2009-05-05  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	Fixes: NB#110504 - Unable to restore background image with Backup and
 	restore application	
 
